_sass/coderdojo-athlone/site.scss
@import "colors";
@import "alert";
@import "github-edit-banner";
@import "variables";
@import "header";
@import "split-50";
@import "profile";

.cda {
  &-container {
    &-body {
      background-color: darken($color_dark, 10);
      color: $color_light;
    }

    &-content {
      position: relative;
      background-color: darken($color_dark, 5);
      box-shadow: inset 0 3px 3px 0 rgba(0, 0, 0, 0.5);

      img {
        border-radius: 3px;
      }
    }

    @media (min-width: $screen-xl) {

      &-content {
        box-shadow: inset -2px 2px 3px 1px rgba(0, 0, 0, .5);
        border-radius: 5px;
      }
    }
  }

  &-shadow-secondary {
    box-shadow: 0 0 5px 1px rgba(153, 204, 204, 0.75);
  }
}

